updates to index and chart display

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -45,7 +45,7 @@
               </div>
 	      <!--<div class="small ml-auto mr-auto">PC-A/C</div>-->
               <div class="card-body px-1 py-1">
-		<div class = "select-container">
+		<div class = "select-container" disabled>
 		  <select class = "input-reading ml-auto mr-auto input-editable pickout" name="VentilatorMode" id="vent_mode" pickouttitle="Select Ventilator Mode" width="10%">
 		  <option value = ""></option>
 		  <optgroup label = "Pressure Control Modes">
