Fix based on new data format

--- a/raspberry-backend/templates/index_prototype.html
+++ b/raspberry-backend/templates/index_prototype.html
@@ -24,9 +24,9 @@
 		<option value='pressure_diff_patient' selected>Patient (diff)</option>
 		
 		<!-- VICTOR test -->
-		<option value='pressure_buffer' selected>Pressure</option>
-		<option value='pressure_inhale' selected>Flow</option>
-		<option value='temperature_buffer' selected>Volume</option>
+		<option value='airway_pressure' selected>airway_pressure</option>
+		<option value='volume' selected>volume</option>
+		<option value='flow' selected>flow</option>
 
 
 
