--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -5991,18 +5991,12 @@ div.active{
 
 }
 
-.sb-nav-button{ border: 2px solid var(--cern); width:95px; background-color:none;
-
-    display: inline-block;
-    //text-shadow: 0 0 2px rgba(0,0,0,.3);
-    //font-family: sans-serif;
-    //box-shadow:
-    //    inset 0 0 2px 0 rgba(255,255,255,.4),
-    //    inset 0 0 3px 0 rgba(0,0,0,.4),
-    //    inset 0 0 3px 5px rgba(0,0,0,.05),
-    //    2px 2px 4px 0 rgba(0,0,0,.25);
-    border-radius: 4px;
-
+.sb-nav-button{ border: 2px solid var(--cern); width:95px;
+		background-color:var(--cern);
+		color:white;
+		display: inline-block;
+		border-radius: 8px;
+		
 	      }
 .sb-control-button:before {
     top: 0;
