--- a/raspberry-backend/templates/charts.html
+++ b/raspberry-backend/templates/charts.html
@@ -13,7 +13,7 @@
     <div class = "row">
 
 
-      <div class = "col-md-10 py-0">
+      <div class = "col-md-11 mr-2">
 	<div class="row">
               <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
               <div class="main-chart-container"><canvas id="pressure_chart"></canvas></div>
