--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -39,7 +39,7 @@
       <div class = "col-cards-main">
 	<div class = "row">
 	<!---- row 1 -->
-	    <div class="card-reading px-0">
+	    <div class="card-input-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		      <span class="small text-dark col-center" href="#">Mode</span>
               </div>
@@ -61,44 +61,45 @@
 	      </div>
 	  </div>
 
-	    <div class="card-reading br-red">
+	    <div class="card-input-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">FIO<sub>2</sub> (cmH2O) </a>
+		<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
               </div>
 			  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div> -->
 			  <div class = "main-chart-container"><canvas id="gauge_fio"></canvas></div>
 	  </div>
 
+	
+	  <div class="card-input-reading">
+		<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
+	  <a class="small text-dark col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O</small> </a><br>
+		</div>
+		<!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div> -->
+		<div class = "main-chart-container"><canvas id="gauge_p_plateau"></canvas></div>
+	</div>
+
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">P<sub>Peak</sub></a>
+		<a class="small text-dark col-center" href="#">P<sub>Peak</sub> <small>[cmH20]</small></a>
 	      </div>
-		  <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id="p_peak" readOnly disabled value=20.0>cmH2O</div> 
+		  <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id="p_peak" readOnly disabled value=20.0></div> 
 	    </div>
 	
 	<!--- end row 1 -->
 
 	<!-- row 2 -->
-	
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">P<sub>Plateau</sub> (cmH2O) </a><br>
+		<a class="small text-dark col-center" href="#">P<sub>Mean</sub> <small>[cmH2O]</small></a>
 	      </div>
-		  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div> -->
-		  <div class = "main-chart-container"><canvas id="gauge_p_plateau"></canvas></div>
-	  </div>
-	    <div class="card-reading">
-	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">P<sub>Mean</sub></a>
-	      </div>
-	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_mean" value=13.0 readOnly disabled>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny"><div class = "vertical-align"><input class = "input-reading" id = "p_mean" value=13.0 readOnly disabled></div></div>
 	  </div>
 
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">PEEP</a>
+		<a class="small text-dark col-center" href="#">PEEP<small>[cmH20]</small></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable"  onclick="show_easy_numpad_wrapper(this);lock();" name = "PEEP" id = "pressure_buffer" value=5 readOnly disabled>cmH2O</div>
+	      <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable"  onclick="show_easy_numpad_wrapper(this);lock();" name = "PEEP" id = "pressure_buffer" value=5 readOnly disabled></div>
 	    </div>
 
 
@@ -109,22 +110,22 @@
 
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">VTI</a>
+		<a class="small text-dark col-center" href="#">VTI <small>[mL]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "vti" value=285 readOnly disabled></span> mL</div>
+              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "vti" value=285 readOnly disabled></span></div>
 	  </div>
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">VTE</a>
+		<a class="small text-dark col-center" href="#">VTE <small>[mL]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "vte" value=273 readOnly disabled>mL</div>
+              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "vte" value=273 readOnly disabled></div>
 	    </div>
 	    
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark col-center" href="#">MVI</a>
+		<a class="small text-dark col-center" href="#">MVI <small>[L/min]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "mvi" value=6.5 readOnly disabled>L/min</div>
+              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "mvi" value=6.5 readOnly disabled></div>
 	    </div>
 	    
 
@@ -134,16 +135,16 @@
 
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark col-center" href="#">MVE</a>
+		<a class="small text-dark col-center" href="#">MVE <small>[L/min]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "mve" value=6.0 readOnly disabled> L/min</div>
+              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "mve" value=6.0 readOnly disabled></div>
 	    </div>
 	    
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">I:E Ratio</a>
+		<a class="small text-dark col-center" href="#">I:E</a>
               </div>
-              <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled   onclick="show_easy_numpad_wrapper(this);lock();"> </div>
+              <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled   onclick="show_easy_numpad_wrapper(this);lock();"> </div>
 	    </div>
 	</div>
 	<!-- end row 4 -->
