--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -66,7 +66,7 @@
 		<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
               </div>
 			  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div> -->
-			  <div class = "main-chart-container lockable" onclick="show_easy_numpad_gauge(this,gauge_fio);lock();"><canvas id="gauge_fio"></canvas></div>
+			  <div class = "main-chart-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fio"></canvas></div>
 	  </div>
 
 	
@@ -75,7 +75,7 @@
 	  <a class="small text-dark col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O</small> </a><br>
 		</div>
 		<!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div> -->
-		<div class = "main-chart-container"><canvas id="gauge_p_plateau"></canvas></div>
+		<div class = "main-chart-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_p_plateau"></canvas></div>
 	</div>
 
 	    <div class="card-reading">
@@ -99,7 +99,7 @@
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">PEEP<small>[cmH20]</small></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable"  onclick="show_easy_numpad(this);lock();" name = "PEEP" id = "pressure_buffer" value=5 readOnly disabled></div>
+	      <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable" name = "PEEP" id = "pressure_buffer" value=5 readOnly disabled></div>
 	    </div>
 
 
@@ -144,7 +144,7 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">I:E</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled   onclick="show_easy_numpad(this);lock();"> </div>
+              <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable" id = "ie_ratio" value=1.3 readOnly disabled> </div>
 	    </div>
 	</div>
 	<!-- end row 4 -->
@@ -204,8 +204,49 @@
   function setChartXaxisRange_wrapper(element,min,max){
   if (!element.disabled){ setChartXaxisRange(min,max);  }
   }
+//document.getElementById("gauge-fio-container").doChange = function(value){
+//	setGaugeValue("gauge-fio", value);
+//}
+//document.getElementById("gauge-fio-container").getValue = function(value){
+//	return getGaugeValue("gauge-fio");
+//}
+class gauge_controller {
+  constructor(name) {
+    this.name = name;
+  }
+  getName(){ return this.name;}
+  getValue() {
+    return getGaugeValue(this.name);
+  }
+  setValue(val){
+	  setGaugeValue(this.name,val);
+  }
+  getMin(){
+	  return getGaugeMinValue(this.name);
+  }
+  getMax(){
+	  return getGaugeMaxValue(this.name);
+  }
+}
 
-  
+fio_controller = new gauge_controller("fio_gauge");
+p_plateau_controller = new gauge_controller("p_plateau_gauge");
+/*
+var gauge_fio_container = document.getElementById("gauge-fio-container");
+Object.defineProperty(gauge_fio_container, 'doChange', {
+  value: function(x){
+	  setGaugeValue("fio_gauge",x);
+	},
+  configurable: true 
+});
+Object.defineProperty(gauge_fio_container, 'getValue', {
+  value: function(){
+	  return getGaugeValue("fio_gauge");
+	},
+  configurable: true 
+});
+*/
+
   pickout.to({
   el:'.pickout',
   theme:'MySelector'
